ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_19.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--joseph--spouse-of-the-blessed-virgin-mary-and-confessor-and-patron-of-the-universal-church\", \"st--joseph\"]"
expression: s.0
---
2025-03-19
Second Vespers of St. Joseph, Spouse of the Blessed Virgin Mary and Confessor and Patron of the Universal Church:
Vespers:
  Antiphons:   Proper
  Psalms:      of Sunday (w.116)
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
  Commemoration of Feria IV week II of Lent:
    Magnificat Antiphon: Psalter (Ordinary of Lent)
    Verse: Psalter (Ordinary of Lent)
    Collect: of Sunday
