ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_23.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-iii-of-lent\", \"dominica-of-lent\"]"
expression: s.0
---
2025-03-23
Second Vespers of Dominica III of Lent:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
