ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_25.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"annunciation-of-the-blessed-virgin-mary\"]"
expression: s.0
---
2025-03-25
Second Vespers of Annunciation of the Blessed Virgin Mary:
Vespers:
  Antiphons:   Proper
  Psalms:      Common of the Blessed Virgin Mary
  Chapter:     Proper
  Hymn:        Common of the Blessed Virgin Mary
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
  Commemoration of Feria III week III of Lent:
    Magnificat Antiphon: Psalter (Ordinary of Lent)
    Verse: Psalter (Ordinary of Lent)
    Collect: of Sunday
