ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_29.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-iv-of-lent\", \"dominica-of-lent\"]"
expression: s.0
---
2025-03-29
First Vespers of Dominica IV of Lent:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
